--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
   "keywords": [],
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "tslint": "^5.20.1",
     "typescript": "^3.9.7"
   },
