--- a/package.json
+++ b/package.json
@@ -33,9 +33,16 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-ensure-login": "^0.1.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.16.4",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.5.0"
+    "express-session": "^1.17.1",
+    "graphql": "^15.5.0",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
