--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
