--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "mongodb": "^3.6.6",
+    "mongoose": "^5.12.9",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
