--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-ensure-login": "^0.1.1",
     "cors": "^2.8.5",
